@@ -87,6 +87,12 @@ struct ip_addr dns_getserver(u8_t numdns);
 err_t          dns_gethostbyname(const char *hostname, struct ip_addr *addr,
                                  dns_found_callback found, void *callback_arg);
 
+#if DNS_LOCAL_HOSTLIST && DNS_LOCAL_HOSTLIST_IS_DYNAMIC
+int            dns_local_removehostname(const char *hostname);
+int            dns_local_removehostaddr(const struct ip_addr *addr);
+err_t          dns_local_addhost(const char *hostname, const struct ip_addr *addr);
+#endif /* DNS_LOCAL_HOSTLIST && DNS_LOCAL_HOSTLIST_IS_DYNAMIC */
+
 #endif /* LWIP_DNS */
 
 #endif /* __LWIP_DNS_H__ */
